--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Yosuke422/ThreeJs#readme",
   "dependencies": {
+    "simplex-noise": "^4.0.3",
     "three": "^0.162.0"
   },
   "devDependencies": {
