--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
-node_modules
+# Dependency directories
+node_modules/
+/.pnp
+.pnp.js
+
+# Build outputs
+/dist
+/build
+/.vite
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
